# wagtail-qrcode

./: .coveragerc  .flake8  .gitignore  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  create.py  docker-compose.yml  package.json  pyproject.toml  scripts.py  setup.py  testmanage.py  testmonday.md  tox.ini  tsconfig.json  webpack.config.js
.circleci/: config.yml  trigger-nightly-build.sh
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: contrubute.md  mailhog.md  not-wagtail-3.md
tests/: apps.py  local.py.example  settings.py  test_cls.py  test_models.py  test_views.py  test_wagtail_hooks.py  urls.py
tests/testapp/: apps.py
tests/testapp/migrations/: 0001_initial.py
tests/testapp/templates/: base.html
tests/testapp/templates/tests_testapp/: qr_code_page.html
wagtail_qrcode/: __init__.py  admin_forms.py  apps.py  cls.py  field_panels.py  models.py  urls.py  views.py  wagtail_hooks.py
wagtail_qrcode/static/wagtail_qrcode/js/: .gitignore
wagtail_qrcode/templates/wagtail_qrcode/admin/: field.html  field_4.html  field_panel.html  field_panel_4.html  qr_code_svg_field.html  qr_code_svg_field_panel.html  qr_code_svg_usage_field.html  qr_code_svg_usage_field_panel.html  usage_field.html  usage_field_4.html  usage_field_panel.html  usage_field_panel_4.html
wagtail_qrcode/test/: __init__.py  apps.py  local.py.example  models.py  settings.py  urls.py
wagtail_qrcode/test/migrations/: 0001_initial.py  0002_alter_testpage_qr_code_svg_and_more.py
wagtail_qrcode/test/tests/: test.py  test_apps.py  test_cls.py  test_field_panels.py  test_models.py  test_urls.py  test_views.py  test_wagtail_hooks.py
